Add rice crispy link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/cookie.html">Chocolate Chip Cookie Recipe</a>
+    <a href="recipes/ricecrispy.html">Rice Crispy Treat Recipe</a>
 </body>
 
 </html>
