--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -28,17 +28,17 @@
         <li>1 tsp baking soda</li>
         <li>1/2 tsp baking powder</li>
         <li>1 tsp sea salt</li>
-        <li>1 cups chocolate chunks</li>
+        <li>2 cups chocolate chunks</li>
     </ul>
     <h5>Steps</h5>
     <ol>
-        <li>Preheat oven to 375 degrees</li>
-        <li>Mix all dry ingredients</li>
+        <li>Preheat oven to 375 degrees.</li>
+        <li>Mix all dry ingredients.</li>
         <li>In a separate bowl, mix all wet ingredients including sugars.</li>
-        <li>Slowly add dry ingredients to wet ingredients and mix with mixer interminttently </li>
-        <li>Fold in chocolate chunks</li>
-        <li>Put 1" sphere cookie dough balls on pan 2" apart</li>
-        <li>Bake in oven for 10 min or until desired consistancy</li>
+        <li>Slowly add dry ingredients to wet ingredients and mix with mixer interminttently. </li>
+        <li>Fold in chocolate chunks.</li>
+        <li>Put 1" sphere cookie dough balls on pan 2" apart.</li>
+        <li>Bake in oven for 10 min or until desired consistancy.</li>
         <li><em>Enjoy!</em></li>
     </ol>
 
