--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cookie.html">Chocolate Chip Cookie Recipe</a>
-    <a href="recipes/ricecrispy.html">Rice Crispy Treat Recipe</a>
+    <ul>
+        <li><a href="recipes/cookie.html">Chocolate Chip Cookie Recipe</a></li>
+        <li><a href="recipes/ricecrispy.html">Rice Crispy Treat Recipe</a></li>
+        <li><a href="recipes/burger.html">Cheeseburger Recipe and Assembly</a></li>
+    </ul>
 </body>
 
 </html>
